src/scss/text_page.scss
.main-title {
  color: #2c3248;
  font-family: "Proxima Nova - Semibold";
  font-size: 50px;
  font-weight: 400;
  line-height: 24px;
  text-transform: uppercase;
  padding: 40px 10px 20px 10px;
}

.text-blog {
  color: #2c3248;
  font-family: "Proxima Nova";
  font-size: 15px;
  font-weight: 300;
  margin-bottom: 35px;

  .row {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 20px;

    .col {
      padding: 0;
    }
  }

  .guarantees__list {
    span {
      color: #567be8;
      font-family: "Proxima Nova - Regular";
      font-size: 24px;
      font-weight: 400;
    }

    ul {
      list-style: none;

      li {
        &:before {
          content: "\2022";
          color: #ff4475;
          font-weight: bold;
          display: inline-block;
          width: 1em;
          margin-left: -1em;
        }
      }
    }
  }

  .table {
    font-family: "Proxima Nova";
    font-size: 16px;
    font-weight: 400;
    line-height: 18px;
    text-align: center;

    .currency {
      font-family: "Proxima Nova";
      font-size: 16px;
      font-weight: 700;
      line-height: 18px;
      text-transform: uppercase;

      .title {
        color: #4b434f;
        font-family: "Proxima Nova";
        font-size: 30px;
        font-weight: 400;
        line-height: 18px;
      }

      .active {
        color: #b85dec;
      }

      th {
        border-right: 1px solid #cdcdcd;

        &:first-child, &:last-child {
          border-right: 1px solid transparent;
        }
      }
    }

    .level {
      color: #ff4475;
    }

    .form-control {
      width: 50%;
      margin-left: 5px;
      border: 1px solid #c2c2c2;
      background-color: #ffffff;
      border-radius: 20px;
      height: 30px;
      padding: 2px 10px;
      @media (max-width: 992px) {
        width: 100%;
      }
    }
  }

  .faq {
    color: #2c3248;
    font-family: "Proxima Nova";
    font-size: 24px;
    font-weight: 300;
  }

  .comments__block {
    margin-top: 15px;

    .comment {
      margin-bottom: 20px;
      color: #4b434f;
      font-family: "Proxima Nova";
      font-size: 14px;
      font-weight: 400;

      .author {
        color: #4b434f;
        font-family: "Proxima Nova";
        font-size: 18px;
        font-weight: 700;
      }

      .edit, .reply, .delete, .date {
        margin: 0 5px 0 0;
      }

      .continue {
        color: lighten(#da3e3c, 20%);
        font-family: "Proxima Nova - Regular";
        font-weight: 400;

        &:hover {
          text-decoration: none;
          color: lighten(#da3e3c, 20%);
          color: #da3e3c;
        }
      }
    }

    .form {
      .form-control {
        border-radius: 20px;
        border: 1px solid #4e4751;
      }

      textarea {
        margin-bottom: 20px;
      }
    }
  }

  .accordion {
    .card {
      border: none;

      .card-header {
        background-color: transparent;
        border: none;
        padding: 0;

        .mb-0 {
          .btn-link {
            color: #2c3248;
            font-family: "Proxima Nova - Semibold";
            font-size: 20px;
            font-weight: 400;
            text-decoration: none;
            margin: 0 0 0 40px;
            padding: 0;
          }
        }

        &:before {
          font-family: "FontAwesome";
          content: '\f059';
          font-size: 24px;
          padding-right: 10px;
          color: #567be8;
          position: absolute;
          top: 3px;
          left: 10px;
        }
      }

      .collapse {
        border-left: 5px dotted #567be8;
        margin-left: 1.2em;
        background-clip: border-box;
        transition: 0.3s;
      }
    }
  }

}

.sidebar {
  .row {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 20px;
  }

  .choose {
    padding: 25px 15px;

    h3 {
      color: #5175e7;
      font-family: "Proxima Nova";
      font-size: 32px;
      font-weight: 700;
      text-transform: uppercase;
      text-align: center;
    }

    ol {
      list-style: none;
      padding-inline-start: 0px;

      li {
        color: #19152d;
        font-family: "Proxima Nova";
        font-size: 16px;
        font-weight: 400;
        margin: 10px;

        span {
          display: block;
          margin-left: 30px;
          margin-top: -25px;
        }

        &:before {
          font-family: "FontAwesome";
          content: '\f00c';
          color: #5b80e9;
          line-height: 10px;
          padding-right: 25px;
        }
      }
    }
  }

  .discounts {
    padding: 25px 15px;

    h3 {
      color: #5175e7;
      font-family: "Proxima Nova";
      font-size: 32px;
      font-weight: 700;
      text-transform: uppercase;
      text-align: center;
    }

    p {
      text-align: center;
      font-family: "Proxima Nova";
      font-size: 20px;
    }

    .discount {
      color: #2c3248;
      font-family: "Proxima Nova";
      font-size: 18px;
      font-weight: 400;
      margin-left: 70px;
      line-height: 25px;
      margin-top: 20px;
    }

    .red {
      span {
        color: #ff4475;
        font-family: "Proxima Nova - Semibold";
        font-size: 48px;
        font-weight: 400;
        text-transform: uppercase;
      }

      &:before {
        position: relative;
        top: 35px;
        right: 35px;
        font-family: "FontAwesome";
        content: '\f054';
        font-size: 40px;
        color: #ff4475;
        line-height: 10px;
        padding-right: 25px;
        display: block;
      }
    }

    .violet {
      span {
        color: #b85dec;
        font-family: "Proxima Nova - Semibold";
        font-size: 48px;
        font-weight: 400;
        text-transform: uppercase;
      }

      &:before {
        position: relative;
        top: 35px;
        right: 35px;
        font-family: "FontAwesome";
        content: '\f054';
        font-size: 40px;
        color: #b85dec;
        line-height: 10px;
        padding-right: 25px;
        display: block;
      }
    }
  }

  .posts {
    padding: 25px 15px;

    h3 {
      color: #5175e7;
      font-family: "Proxima Nova";
      font-size: 32px;
      font-weight: 700;
      text-transform: uppercase;
      text-align: center;
    }

    .post {
      padding: 0 15px;
      margin-top: 15px;

      a {
        color: #2c3248;
        font-family: "Proxima Nova";
        font-size: 16px;
        font-weight: 400;
        text-decoration: none;

        &:hover {
          color: #5175e7;
        }
      }

      span {
        display: block;
        color: #2c3248;
        font-family: "Proxima Nova";
        font-size: 17px;
        font-weight: 400;
      }
    }
  }
}

